# vala-gnome-builder

./: id.sucipto.gkbbi.json  meson.build
data/: id.sucipto.gkbbi.appdata.xml.in  id.sucipto.gkbbi.desktop.in  id.sucipto.gkbbi.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: application.vala  gkbbi.gresource.xml  headerbar.vala  main.vala  meson.build  window.ui  window.vala  worddetail.vala  wordlist.vala
